--- a/myapi/alembic.ini
+++ b/myapi/alembic.ini
@@ -61,6 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 sqlalchemy.url = sqlite:///./myapi.db
+#driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
